nunjucks structure reworked

--- a/src/nunjucks/index.html
+++ b/src/nunjucks/index.html
@@ -1,5 +1,9 @@
-{% set title = "page title" %}
+{% extends "layouts/_default.html" %}
 
-{% include "modules/_header.html" %}
-  
-{% include "modules/_footer.html" %}
+{% block title %}
+  index
+{% endblock %}
+
+{% block content %}
+  content
+{% endblock %}
