--- a/src/nunjucks/modules/_footer.html
+++ b/src/nunjucks/modules/_footer.html
@@ -1,4 +1,3 @@
-    <footer class="footer"></footer>
-    <script src="js/script.js"></script>
-  </body>
-</html>
+<footer class="footer">
+  footer
+</footer>
