--- a/src/nunjucks/modules/_header.html
+++ b/src/nunjucks/modules/_header.html
@@ -1,12 +1,3 @@
-{% include "../util/_svgstore.html" %}
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-    <title>{{ title }}</title>
-    <link href="css/style.css" rel="stylesheet">  
-  </head>
-  <body>
-    <header class="header"></header>
+<header class="header">
+  header
+</header>
