svgstore title parameter

--- a/src/nunjucks/util/_svgstore.html
+++ b/src/nunjucks/util/_svgstore.html
@@ -1,6 +1,7 @@
-{% macro svgstore(svg) %}
+{% macro svgstore(svg, title) %}
   <span class="svgstore svgstore--{{ svg }}">
     <svg>
+      {% if title %}<title>{{ title }}</title>{% endif %}
       <use xlink:href="/img/svgstore.svg#{{ svg }}"></use>
     </svg>
   </span>
